# leg_tracker_benchmarks

./: .gitmodules  README.md  README.md~
annotate_rosbags/: CMakeLists.txt  package.xml
annotate_rosbags/launch/: annotate.launch  merge.launch  split.launch
annotate_rosbags/map/: map.yaml
annotate_rosbags/rviz/: annotate_rosbags.rviz
annotate_rosbags/scripts/: annotate_rosbags.py  filter_scan.py  merge_rosbags.py  playback_and_record_tracked.py  split_rosbag.py
annotate_rosbags_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
annotate_rosbags_rviz_plugin/src/: drive_widget.cpp  drive_widget.h  teleop_panel.cpp  teleop_panel.h
benchmark_launch/: run_all_following_benchmarks.sh  run_all_runtime_benchmarks.sh  run_all_tracking_benchmarks.sh
benchmark_launch/runtime_benchmarks/: runtime_general_tracking_moving_1_individual_leg.launch  runtime_general_tracking_moving_1_joint_leg.launch  runtime_general_tracking_moving_2_individual_leg.launch  runtime_general_tracking_moving_2_joint_leg.launch  runtime_general_tracking_moving_2_leg_detector.launch  runtime_general_tracking_stationary_1_individual_leg.launch  runtime_general_tracking_stationary_1_leg_detector.launch  runtime_person_following_indoor_1_individual_leg.launch  runtime_person_following_indoor_1_joint_leg.launch  runtime_person_following_indoor_2_joint_leg.launch  runtime_person_following_indoor_2_leg_detector.launch  runtime_person_following_indoor_3_joint_leg.launch  (+4 more)
clear_mot/: CMakeLists.txt  package.xml
leg_tracker/: CMakeLists.txt  package.xml
leg_tracker/msg/: LegArray.msg
(+60 files in other folders)
